[project]
name = "kingpin"
description = "Deployment Automation Engine"
requires-python = ">=3.13"
license = {text = "Apache License, Version 2.0"}
authors = [{name = "Nextdoor Engineering"}]
maintainers = [{name = "Nextdoor Engineering"},]
keywords = [
    "deployment",
    "automation",
    "kingpin",
    "aws",
    "nextdoor",
    "cloudformation"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]
dependencies = [
    "tornado==6.5.4",
    "jsonschema>=3.0.0,<5.0.0",
    "jsonpickle==4.1.1",
    "cfn-flip==1.3.0",
    "rainbow_logging_handler==2.2.2",
    "boto3==1.42.0",
    "inflection==0.5.1",
    "zipp==3.23.0",
    "configparser==7.2.0",
]
dynamic = [
    "version",
    "readme",
]

[project.optional-dependencies]
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://nextdoor.com/"
Documentation = "https://kingpin.readthedocs.io/en/latest/"
Source = "https://github.com/Nextdoor/kingpin"
Changelog = "https://github.com/Nextdoor/kingpin/releases"

[project.scripts]
kingpin = "kingpin.bin.deploy:begin"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "kingpin.version.__version__"}
readme = {file = ["README.rst"]}

[tool.coverage.run]
omit = ["**/test/*"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "mock",
    "pyflakes",
    "setuptools",
    "build",
    "requests",
]
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
]

[tool.uv]
python-preference = "only-managed"
