[project]
name = "kingpin"
description = "Deployment Automation Engine"
requires-python = ">=3.9"
license = {text = "Apache License, Version 2.0"}
authors = [{name = "Nextdoor Engineering"}]
maintainers = [{name = "Nextdoor Engineering"},]
keywords = [
    "deployment",
    "automation",
    "kingpin",
    "aws",
    "nextdoor",
    "cloudformation"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]
dependencies = [
    # Async I/O engine, coroutines, HTTP client
    # https://tornado.readthedocs.org/en/latest/gen.html#tornado.gen.with_timeout
    "tornado==6.5.4",
    # JSON schema validation for the deployment DSL
    "jsonschema>=3.0.0,<5.0.0",
    "jsonpickle==4.1.1",
    # CFN YAML parsing (handles edge cases PyYAML doesn't)
    "cfn-flip==1.3.0",
    # Colorized log output
    "rainbow_logging_handler==2.2.2",
    # kingpin.actors.aws.*
    "boto3==1.42.0",
    # snake_case to CamelCase conversion (S3 actor)
    "inflection==0.5.1",
]
dynamic = [
    "version",
    "readme",
]

[project.optional-dependencies]
# NOTE: keep in sync with [dependency-groups] docs (used by uv locally)
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://nextdoor.com/"
Documentation = "https://kingpin.readthedocs.io/en/latest/"
Source = "https://github.com/Nextdoor/kingpin"
Changelog = "https://github.com/Nextdoor/kingpin/releases"

[project.scripts]
kingpin = "kingpin.bin.deploy:begin"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "kingpin.version.__version__"}
readme = {file = ["README.rst"]}

[tool.coverage.run]
omit = ["**/test/*"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    # formatting
    "black",
    # testing
    "pytest",
    "pytest-cov",
    "mock",
    "pyflakes",
    "requests",
    # building
    "setuptools",
    "build",
]
# NOTE: keep in sync with [project.optional-dependencies] docs (used by RTD/pip)
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
]

[tool.uv]
python-preference = "only-managed"
