[project]
name = "kingpin"
description = "Deployment Automation Engine"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Nextdoor Engineering"}]
maintainers = [{name = "Nextdoor Engineering"},]
keywords = [
    "deployment",
    "automation",
    "kingpin",
    "aws",
    "nextdoor",
    "cloudformation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    # JSON schema validation for the deployment DSL
    "jsonschema>=3.0.0,<5.0.0",
    "jsonpickle==4.1.1",
    # CFN YAML parsing (handles edge cases PyYAML doesn't)
    "cfn-flip==1.3.0",
    # Colorized log output
    "rainbow_logging_handler==2.2.2",
    # kingpin.actors.aws.*
    "boto3==1.42.0",
    # snake_case to CamelCase conversion (S3 actor)
    "inflection==0.5.1",
]
dynamic = [
    "version",
    "readme",
]

[project.optional-dependencies]
# NOTE: keep in sync with [dependency-groups] docs (used by uv locally)
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://nextdoor.com/"
Documentation = "https://kingpin.readthedocs.io/en/latest/"
Source = "https://github.com/Nextdoor/kingpin"
Changelog = "https://github.com/Nextdoor/kingpin/releases"

[project.scripts]
kingpin = "kingpin.bin.deploy:begin"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "kingpin.version.__version__"}
readme = {file = ["README.rst"]}

[tool.coverage.run]
omit = ["**/test/*"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    # formatting
    "black",
    # linting (parallel to pyflakes during transition)
    "ruff",
    # type checking
    "mypy",
    # testing
    "pytest",
    "pytest-cov",
    "pyflakes",
    "requests",
    # building
    "setuptools",
    "build",
]
# NOTE: keep in sync with [project.optional-dependencies] docs (used by RTD/pip)
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes (superset of standalone pyflakes)
    "W",       # pycodestyle warnings
    "I",       # isort (import sorting)
    "B",       # flake8-bugbear (common bug patterns)
    "UP",      # pyupgrade (auto-modernize Python syntax)
    "ASYNC",   # flake8-async (blocking calls in async functions)
    "RUF006",  # asyncio-dangling-task
]
ignore = [
    # --- Conflict resolution: existing CI tools take precedence ---
    # TODO(ruff-primary): re-enable E501 after ruff replaces black.
    # Black handles line length; ruff E501 flags string literals and comments
    # that black intentionally leaves alone.
    "E501",

    # --- Intentional patterns (not tool conflicts) ---
    # Module-level imports not at top — 3 intentional violations in
    # test_base.py where imports follow os.environ manipulation.
    "E402",
    # Mutable argument defaults (B006) — BaseActor.__init__ uses `options={}`
    # and `init_context={}` as defaults intentionally (copied immediately).
    "B006",
    # Function call in default argument (B008) — 1 instance in base.py, same
    # pattern as B006. Intentional.
    "B008",
    # Ambiguous variable name (E741) — 1 instance using `e` as a variable
    # in an except clause. Standard Python pattern.
    "E741",
]

[tool.ruff.lint.per-file-ignores]
# Test files: suppress assert-raises-exception (B017) — tests legitimately
# use `assertRaises(Exception)` for broad exception testing.
"**/test/*.py" = ["B017"]

[tool.ruff.format]
# TODO(ruff-primary): ruff format is NOT used during the parallel-tools period.
# Black remains the sole formatter. These settings exist only to keep ruff format
# output close to black's for comparison, not for actual use.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.uv]
python-preference = "only-managed"
